--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,46 +1,27 @@
 .wrapper {
   width: 100%;
-  min-height: 100vh;
-  background-color: #000;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: monospace;
-  font-size: 16px;
+  height: 100vh;
 }
 
 .container {
-  width: 1000px;
-  min-height: 700px;
-  border: 1px solid #fff;
-  display: grid;
-  padding: 30px;
-  grid-template-columns: 200px 1fr;
-  gap: 30px;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.button {
-  width: 100%;
-  height: 50px;
-  font-family: monospace;
-  padding: 7px 15px;
-  cursor: pointer;
-}
-
-.output {
+  position: relative;
   width: 100%;
   height: 100%;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 30px;
+  display: grid;
+  grid-template-columns: minmax(615px, 1fr) 615px;
+  gap: 0;
+  background-color: #d1cdcc;
+  color: #000;
 }
 
+.constructedEmail,
+.emailElems {
+  overflow-y: scroll;
+}
+
+.toast {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
